--- a/index.html
+++ b/index.html
@@ -3,26 +3,102 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Portfolio</title>
+    <title>Jenorison Muji - Portfolio</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>Welcome to My Portfolio</h1>
+        <div class="container">
+            <h1>Jenorison Muji</h1>
+            <p>Bachelor of Science with Honours (Marine Science)</p>
+            <p>Universiti Kebangsaan Malaysia (UKM)</p>
+        </div>
     </header>
-    <section>
-        <h2>About Me</h2>
-        <p>This is a brief description about me.</p>
-    </section>
-    <section>
-        <h2>Projects</h2>
+    
+    <nav>
         <ul>
-            <li><a href="https://github.com/username/project1">Project 1</a></li>
-            <li><a href="https://github.com/username/project2">Project 2</a></li>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#experience">Experience</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
+
+    <section id="about" class="container">
+        <h2>About Me</h2>
+        <p>I am a passionate Marine Science graduate with experience in environmental conservation, research, and technical support. I have a strong academic background and hands-on experience in marine ecosystem surveys, conservation projects, and more.</p>
+    </section>
+
+    <section id="education" class="container">
+        <h2>Education</h2>
+        <ul>
+            <li>
+                <h3>Bachelor of Science with Honours (Marine Science)</h3>
+                <p>Universiti Kebangsaan Malaysia (UKM) | Sep 2018 — Aug 2022</p>
+                <p>Current CGPA: 3.68/4.00</p>
+                <p>Related coursework: Aerial Photography, Dynamic Oceanography, Environmental Impact Assessment, and more.</p>
+            </li>
+            <li>
+                <h3>Sijil Tinggi Pelajaran Malaysia (STPM)</h3>
+                <p>Sekolah Menengah Kebangsaan Gunsanad | Mei 2016 — Dec 2017</p>
+                <p>CGPA: 2.59</p>
+            </li>
         </ul>
     </section>
+
+    <section id="experience" class="container">
+        <h2>Experience</h2>
+        <ul>
+            <li>
+                <h3>Executive</h3>
+                <p>Minconsult Sdn. Bhd. | Petaling Jaya Selangor | May 2022 - Present</p>
+                <ul>
+                    <li>Established and nurtured strategic partnerships with local and international universities.</li>
+                    <li>Overseen R&D projects from concept to completion.</li>
+                    <li>Conducted annual company benchmarks and strategic planning.</li>
+                </ul>
+            </li>
+            <li>
+                <h3>Veterinary Technician</h3>
+                <p>Healing Pets Medical Center | Petaling Jaya Selangor | Feb 2022 — Aug 2022</p>
+                <ul>
+                    <li>Assisted veterinarians in patient care and surgery preparation.</li>
+                    <li>Conducted diagnostic tests and interpreted results.</li>
+                </ul>
+            </li>
+            <li>
+                <h3>Conservation Intern</h3>
+                <p>Kapas Conservation Society | Pulau Kapas Terengganu | Dec 2021 — May 2022</p>
+                <ul>
+                    <li>Engaged in marine creature surveys using scuba diving, snorkeling, etc.</li>
+                    <li>Organized and supervised environmental conservation events.</li>
+                </ul>
+            </li>
+        </ul>
+    </section>
+
+    <section id="skills" class="container">
+        <h2>Skills</h2>
+        <ul>
+            <li>Microsoft Office - Experienced</li>
+            <li>Google Suites - Experienced</li>
+            <li>BioEdit - Beginner</li>
+            <li>MEGA 11 - Beginner</li>
+            <li>Canva - Intermediate</li>
+            <li>R-software - Beginner</li>
+        </ul>
+    </section>
+
+    <section id="contact" class="container">
+        <h2>Contact</h2>
+        <p>Email: <a href="mailto:jenorison.m@gmail.com">jenorison.m@gmail.com</a></p>
+        <p>LinkedIn: <a href="https://www.linkedin.com/in/jenorison-muji/">Jenorison Muji</a></p>
+        <p>Phone: +60162489049</p>
+    </section>
+
     <footer>
-        <p>Contact: <a href="mailto:your-email@example.com">your-email@example.com</a></p>
+        <p>&copy; 2024 Jenorison Muji. All rights reserved.</p>
     </footer>
 </body>
 </html>
