--- a/index.html
+++ b/index.html
@@ -8,12 +8,13 @@
 </head>
 <body>
     <header>
-        <div class="container">
-            <h1>Jenorison Muji</h1>
-            <p>Bachelor of Science with Honours (Marine Science)</p>
-            <p>Universiti Kebangsaan Malaysia (UKM)</p>
-        </div>
-    </header>
+    <div class="container">
+        <img src="your-photo.jpg" alt="Jenorison Muji">
+        <h1>Jenorison Muji</h1>
+        <p>Bachelor of Science with Honours (Marine Science)</p>
+        <p>Universiti Kebangsaan Malaysia (UKM)</p>
+    </div>
+</header>
     
     <nav>
         <ul>
