Added images and updated website files

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="container">
             <!-- Add your photo here -->
-            <img src="your-photo.jpg" alt="Jenorison Muji">
+            <img src="jenorison.jpg" alt="Jenorison Muji">
             <h1>Jenorison Muji</h1>
             <p>Bachelor of Science with Honours (Marine Science)</p>
             <p>Universiti Kebangsaan Malaysia (UKM)</p>
