--- a/index.html
+++ b/index.html
@@ -49,36 +49,78 @@
         </ul>
     </section>
 
-    <section id="experience" class="container">
+    <section id="experience">
+    <div class="container">
         <h2>Experience</h2>
-        <ul>
-            <li>
-                <h3>Executive</h3>
-                <p>Minconsult Sdn. Bhd. | Petaling Jaya Selangor | May 2022 - Present</p>
-                <ul>
-                    <li>Established and nurtured strategic partnerships with local and international universities.</li>
-                    <li>Overseen R&D projects from concept to completion.</li>
-                    <li>Conducted annual company benchmarks and strategic planning.</li>
-                </ul>
-            </li>
-            <li>
-                <h3>Veterinary Technician</h3>
-                <p>Healing Pets Medical Center | Petaling Jaya Selangor | Feb 2022 — Aug 2022</p>
-                <ul>
-                    <li>Assisted veterinarians in patient care and surgery preparation.</li>
-                    <li>Conducted diagnostic tests and interpreted results.</li>
-                </ul>
-            </li>
-            <li>
-                <h3>Conservation Intern</h3>
-                <p>Kapas Conservation Society | Pulau Kapas Terengganu | Dec 2021 — May 2022</p>
-                <ul>
-                    <li>Engaged in marine creature surveys using scuba diving, snorkeling, etc.</li>
-                    <li>Organized and supervised environmental conservation events.</li>
-                </ul>
-            </li>
-        </ul>
-    </section>
+        <div class="experience-item">
+            <h3>Executive</h3>
+            <h4>Minconsult Sdn. Bhd.</h4>
+            <p>Petaling Jaya Selangor | May 2022 - Present</p>
+            <ul>
+                <li>Establish and nurture strategic partnerships with local and international universities to enhance research capabilities, knowledge exchange, and talent development.</li>
+                <li>Collaborate with internal departments, external research organizations, and industry partners.</li>
+                <li>Stay informed about emerging technologies and industry trends relevant to the organization.</li>
+                <li>Oversee R&D projects from concept to completion.</li>
+                <li>Monitor project progress, ensuring adherence to deadlines and quality standards.</li>
+                <li>Conduct annual company benchmark - Financial Performance, Operational Efficiency, Market Positioning, Customer Satisfaction, and Strategic Planning.</li>
+                <li>Develop and implement strategies for efficient information and knowledge management.</li>
+                <li>Curate and maintain a repository of relevant documents, research papers, articles, and other knowledge assets.</li>
+                <li>Create and update content including manuals, guides, and other documentation to facilitate knowledge transfer.</li>
+                <li>Develop and implement a strategic talent development plan aligned with organizational objectives.</li>
+                <li>Work with HR and managers to integrate talent development into the performance management process.</li>
+            </ul>
+        </div>
+        <div class="experience-item">
+            <h3>Veterinary Technician</h3>
+            <h4>Healing Pets Medical Center</h4>
+            <p>Petaling Jaya Selangor | Feb 2022 - Aug 2022</p>
+            <ul>
+                <li>Assisted veterinarians and technicians in patient care, including restraint, medication administration, and surgery preparation.</li>
+                <li>Maintained cleanliness and organization of hospital and kennels.</li>
+                <li>Educated clients on basic animal care and preventive health.</li>
+                <li>Conducted diagnostic tests such as bloodwork and urinalysis, and interpreted results.</li>
+                <li>Maintained medical records and ensured accurate billing.</li>
+                <li>Maintained equipment and supplies, including inventory control.</li>
+            </ul>
+        </div>
+        <div class="experience-item">
+            <h3>Conservation Intern</h3>
+            <h4>Kapas Conservation Society</h4>
+            <p>Pulau Kapas Terengganu | Dec 2021 - May 2022</p>
+            <ul>
+                <li>Created and developed presentations on Pulau Kapas species identification, including those of the fish and invertebrates that are frequently encountered.</li>
+                <li>Actively engaged in marine creature surveys at several sites near Pulau Kapas using various techniques including scuba diving, free diving, and snorkeling, which were carried out at least three times per week.</li>
+                <li>Overseen and supervised the World Ocean Week 2022 program, which included events and workshops for the island's residents and visitors to raise awareness and knowledge.</li>
+                <li>Organized the largest annual beach and reef cleanup event in Pulau Kapas, which featured 10 sponsors, including the senator's office and Marang District Council.</li>
+                <li>Updated and created content for the social media and website of the Kapas Conservation Society.</li>
+                <li>Participated in SEATRU University of Malaysia Terengganu's in-person sea turtle conservation program in Chagar Hutang, Pulau Redang.</li>
+                <li>Participated in Universiti Malaysia Terengganu's coral restoration workshop in Pusat Penyelidikan Alami, Pulau Bidong, Terengganu.</li>
+            </ul>
+        </div>
+        <div class="experience-item">
+            <h3>Sales Advisor</h3>
+            <h4>Ararat Keningau</h4>
+            <p>May 2021</p>
+            <ul>
+                <li>Facilitated sales transactions by advising customers on suitable products that best meet their needs and encouraged purchases.</li>
+                <li>Resolved product or service problems by providing the best solution.</li>
+                <li>Worked on various sections to ensure stock is organized and well-presented, serviced customers at the register, processed refunds, and responded to product inquiries.</li>
+                <li>Met customers' needs by listening to their issues and working with them to find reasonable solutions.</li>
+                <li>Interacted effectively with team members to provide exceptional service and manage busy periods in the store.</li>
+            </ul>
+        </div>
+        <div class="experience-item">
+            <h3>Head of Protocol</h3>
+            <h4>Perlawanan Antara Lagenda UKM</h4>
+            <p>March 2018 – July 2018</p>
+            <ul>
+                <li>Led and organized 10 committee members to carry out responsibilities according to their scope of work.</li>
+                <li>Supervised the floor during the event, including ensuring the program flow, technical effectiveness, and broadcasting etiquette.</li>
+            </ul>
+        </div>
+    </div>
+</section>
+
 
     <section id="skills" class="container">
         <h2>Skills</h2>
