added new background and styles

--- a/index.html
+++ b/index.html
@@ -17,15 +17,16 @@
         </div>
     </header>
     
-    <nav>
-        <ul>
-            <li><a href="#about">About</a></li>
-            <li><a href="#education">Education</a></li>
-            <li><a href="#experience">Experience</a></li>
-            <li><a href="#skills">Skills</a></li>
-            <li><a href="#contact">Contact</a></li>
-        </ul>
-    </nav>
+ <nav>
+    <ul>
+        <li><a href="#about">About</a></li>
+        <li><a href="#education">Education</a></li>
+        <li><a href="#experience">Experience</a></li>
+        <li><a href="#skills">Skills</a></li>
+        <li><a href="#contact">Contact</a></li>
+    </ul>
+</nav>
+
 
     <section id="about" class="container">
         <h2>About Me</h2>
@@ -91,35 +92,8 @@
                 <li>Created and developed presentations on Pulau Kapas species identification, including those of the fish and invertebrates that are frequently encountered.</li>
                 <li>Actively engaged in marine creature surveys at several sites near Pulau Kapas using various techniques including scuba diving, free diving, and snorkeling, which were carried out at least three times per week.</li>
                 <li>Overseen and supervised the World Ocean Week 2022 program, which included events and workshops for the island's residents and visitors to raise awareness and knowledge.</li>
-                <li>Organized the largest annual beach and reef cleanup event in Pulau Kapas, which featured 10 sponsors, including the senator's office and Marang District Council.</li>
-                <li>Updated and created content for the social media and website of the Kapas Conservation Society.</li>
-                <li>Participated in SEATRU University of Malaysia Terengganu's in-person sea turtle conservation program in Chagar Hutang, Pulau Redang.</li>
-                <li>Participated in Universiti Malaysia Terengganu's coral restoration workshop in Pusat Penyelidikan Alami, Pulau Bidong, Terengganu.</li>
-            </ul>
-        </div>
-        <div class="experience-item">
-            <h3>Sales Advisor</h3>
-            <h4>Ararat Keningau</h4>
-            <p>May 2021</p>
-            <ul>
-                <li>Facilitated sales transactions by advising customers on suitable products that best meet their needs and encouraged purchases.</li>
-                <li>Resolved product or service problems by providing the best solution.</li>
-                <li>Worked on various sections to ensure stock is organized and well-presented, serviced customers at the register, processed refunds, and responded to product inquiries.</li>
-                <li>Met customers' needs by listening to their issues and working with them to find reasonable solutions.</li>
-                <li>Interacted effectively with team members to provide exceptional service and manage busy periods in the store.</li>
-            </ul>
-        </div>
-        <div class="experience-item">
-            <h3>Head of Protocol</h3>
-            <h4>Perlawanan Antara Lagenda UKM</h4>
-            <p>March 2018 – July 2018</p>
-            <ul>
-                <li>Led and organized 10 committee members to carry out responsibilities according to their scope of work.</li>
-                <li>Supervised the floor during the event, including ensuring the program flow, technical effectiveness, and broadcasting etiquette.</li>
-            </ul>
-        </div>
-    </div>
-</section>
+                <li>Organized the largest annual beach and reef cleanup event in Pulau Kapas, which featured 10 sponsors, including the senator's office and Marang District Council.</
+
 
 
     <section id="skills" class="container">
