Updated portfolio with notable projects and tasks

--- a/index.html
+++ b/index.html
@@ -7,107 +7,149 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
+    <!-- Header Section -->
     <header>
         <div class="container">
-            <!-- Add your photo here -->
             <img src="jenorison.jpg" alt="Jenorison Muji">
             <h1>Jenorison Muji</h1>
+			</p>Marine Science Graduate | Conservation Enthusiast | Project Coordinator | Environmental Conservation | Marine Science Specialist
             <p>Bachelor of Science with Honours (Marine Science)</p>
             <p>Universiti Kebangsaan Malaysia (UKM)</p>
         </div>
     </header>
     
- <nav>
-    <ul>
-        <li><a href="#about">About</a></li>
-        <li><a href="#education">Education</a></li>
-        <li><a href="#experience">Experience</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#contact">Contact</a></li>
-    </ul>
-</nav>
+    <!-- Navigation Section -->
+    <nav>
+        <ul>
+            <li><a href="#about">About</a></li>
+            <li><a href="#education">Education</a></li>
+            <li><a href="#notable projects">Notable projects</a></li>
+            <li><a href="#skills">Skills</a></li>
+            <li><a href="certifications.html">Awards & Certifications</a></li>
+            <li><a href="#contact">Contact</a></li>
+        </ul>
+    </nav>
 
-
+    <!-- About Section -->
     <section id="about" class="container">
         <h2>About Me</h2>
-        <p>I am a passionate Marine Science graduate with experience in environmental conservation, research, and technical support. I have a strong academic background and hands-on experience in marine ecosystem surveys, conservation projects, and more.</p>
+        <p>
+            Standing at the intersection of environmental challenges and sustainable solutions, my journey has been fueled by a deep desire to advocate for a harmonious balance between humanity and the planet. Initially set on a path to become a doctor, I realized my true calling lay in protecting the natural world, not just a few patients. Growing up in the heart of the Borneo jungle gave me a firsthand understanding of how rapidly our planet is deteriorating due to human activity. This realization drove me to focus on environmental sustainability as a career. 
+            <br><br>
+            Pursuing a degree in Marine Science was a deliberate step toward understanding the complexity of ecological systems and the profound effects of human behavior on them. My academic foundation sparked a passion for sustainable practices and conservation, and my undergraduate studies allowed me to explore the intricate workings of marine ecosystems. This, in turn, fueled my desire to apply sustainable principles in real-world scenarios and contribute meaningfully to the field.
+            <br><br>
+			In addition to my academic background, I have gained hands-on experience through practical work. A notable part of my journey was an internship with the Kapas Conservation Society on Pulau Kapas, an area once virtually untouched by human intervention. This experience heightened my awareness of environmental preservation and gave me valuable insights into practical sustainability efforts. While working on-site, I collaborated on a project to develop and implement a waste reduction program for a local community, demonstrating my ability to turn abstract ideas into impactful, real-world solutions.
+			<br><br>
+			My passion for environmental sustainability extends beyond my academic and professional experiences. I have been actively involved in community-based environmental projects, such as leading tree-planting activities and organizing awareness campaigns. These initiatives have strengthened my leadership and communication skills, allowing me to bring diverse groups together to work toward a shared environmental goal.
+			<br><br>
+			In my role as an executive at an engineering firm, I gained a deeper understanding of how sustainability is integrated into engineering practices. This hands-on experience reinforced my belief that sustainability must be a core principle embedded in all industries and sectors, and it showed me the tangible impact sustainable engineering practices can have on a larger scale.
+			<br><br>
+			Looking ahead, I am eager to continue applying my knowledge and skills to drive positive environmental change. I am actively seeking opportunities to contribute to sustainability initiatives, leveraging my practical experience and academic background to create a cleaner, greener future. While I am passionate about working in roles related to environmental sustainability, I am open to any position or opportunity where I can make a meaningful impact.
+			<br><br>
+            <strong>Vision:</strong> To lead impactful marine conservation initiatives that protect and restore marine biodiversity for future generations.
+            <br>
+            <strong>Mission:</strong> To combine scientific research with practical conservation efforts, fostering community involvement and sustainable practices in marine ecosystems around the world.
+        </p>
     </section>
-
+	
+	<!-- Education Section -->
     <section id="education" class="container">
-        <h2>Education</h2>
-        <ul>
-            <li>
-                <h3>Bachelor of Science with Honours (Marine Science)</h3>
-                <p>Universiti Kebangsaan Malaysia (UKM) | Sep 2018 — Aug 2022</p>
-                <p>Current CGPA: 3.68/4.00</p>
-                <p>Related coursework: Aerial Photography, Dynamic Oceanography, Environmental Impact Assessment, and more.</p>
-            </li>
-            <li>
-                <h3>Sijil Tinggi Pelajaran Malaysia (STPM)</h3>
-                <p>Sekolah Menengah Kebangsaan Gunsanad | Mei 2016 — Dec 2017</p>
-                <p>CGPA: 2.59</p>
-            </li>
-        </ul>
+    <h2>Education</h2>
+    <ul>
+        <li>
+            <h3>Bachelor of Science with Honours (Marine Science)</h3>
+            <p>Universiti Kebangsaan Malaysia (UKM) | Sep 2018 — Aug 2022</p>
+            <p>Current CGPA: 3.68/4.00</p>
+            <p>Related coursework: Aerial Photography, Dynamic Oceanography, Environmental Impact Assessment, and more.</p>
+
+            <!-- Transcript Images -->
+            <div class="transcript">
+                <h4>Academic Transcript:</h4>
+
+                <!-- First Transcript Thumbnail -->
+                <a href="#transcriptModal1">
+                    <img src="Trancript1_thumbnail.jpg" alt="Transcript 1" class="transcript-thumbnail">
+                </a>
+
+                <!-- Modal for Enlarged First Transcript -->
+                <div id="transcriptModal1" class="modal">
+                    <div class="modal-content">
+                        <span class="close-modal">&times;</span>
+                        <img src="Trancript1.jpg" alt="Full Transcript 1" class="transcript-full">
+                    </div>
+                </div>
+
+                <!-- Second Transcript Thumbnail -->
+                <a href="#transcriptModal2">
+                    <img src="Trancript2_thumbnail.jpg" alt="Transcript 2" class="transcript-thumbnail">
+                </a>
+
+                <!-- Modal for Enlarged Second Transcript -->
+                <div id="transcriptModal2" class="modal">
+                    <div class="modal-content">
+                        <span class="close-modal">&times;</span>
+                        <img src="Transcript2.jpg" alt="Full Transcript 2" class="transcript-full">
+                    </div>
+                </div>
+
+            </div>
+        </li>
+
+        <li>
+            <h3>Sijil Tinggi Pelajaran Malaysia (STPM)</h3>
+            <p>Sekolah Menengah Kebangsaan Gunsanad | Mei 2016 — Dec 2017</p>
+            <p>CGPA: 2.59</p>
+        </li>
+    </ul>
+</section>
+
+
+
+    <!-- Notable Project Section -->
+    <section id="notable projects" class="container">
+    <h2>Notable Projects/Assignments</h2>
+
+    <!-- Minconsult Sdn. Bhd. Project: University Collaboration -->
+    <div class="project-item">
+        <h3>University Collaboration – Minconsult Sdn. Bhd.</h3>
+        <p><strong>Duration:</strong> Ongoing</p>
+        <p>Collaborated with 12 local and 2 international universities on engineering research, knowledge exchange, and talent development initiatives. Established long-term Memorandums of Understanding (MoUs) and coordinated MoU signing ceremonies to formalize partnerships.</p>
+    </div>
+
+    <!-- Minconsult Sdn. Bhd. Project: Digitalization of Library -->
+    <div class="project-item">
+        <h3>Digitalization of Old Library – Minconsult Sdn. Bhd.</h3>
+        <p><strong>Duration:</strong> Ongoing</p>
+        <p>Led the transformation of the company’s library into a digital repository, increasing the efficiency of knowledge access and facilitating easier retrieval of documents for employees and stakeholders.</p>
+    </div>
+
+    <!-- Minconsult Sdn. Bhd. Project: Benchmarking for Business Plan Formulations -->
+    <div class="project-item">
+        <h3>Benchmarking for Business Plan Formulations – Minconsult Sdn. Bhd.</h3>
+        <p><strong>Duration:</strong> Ongoing</p>
+        <p>
+            Conducted the first-ever benchmarking exercise at Minconsult to guide improvements and define the company's way forward. This benchmarking effort was instrumental in identifying areas for strategic enhancements, and served as the foundation for the development of new Business Plans aligned with industry trends.
+        </p>
+        <p><strong>Contribution:</strong> Researched and analyzed data from 10 top global engineering consulting firms. Presented the company's first annual benchmarking report, covering aspects such as company structure, financial outlook, human capital, and specialization & expertise. The report received endorsement from the Board of Directors and set the stage for strategic advancements and detailed planning initiatives across the organization.</p>
+    </div>
+
+</section>
+
+
     </section>
 
-    <section id="experience">
-    <div class="container">
-        <h2>Experience</h2>
-        <div class="experience-item">
-            <h3>Executive</h3>
-            <h4>Minconsult Sdn. Bhd.</h4>
-            <p>Petaling Jaya Selangor | May 2022 - Present</p>
-            <ul>
-                <li>Establish and nurture strategic partnerships with local and international universities to enhance research capabilities, knowledge exchange, and talent development.</li>
-                <li>Collaborate with internal departments, external research organizations, and industry partners.</li>
-                <li>Stay informed about emerging technologies and industry trends relevant to the organization.</li>
-                <li>Oversee R&D projects from concept to completion.</li>
-                <li>Monitor project progress, ensuring adherence to deadlines and quality standards.</li>
-                <li>Conduct annual company benchmark - Financial Performance, Operational Efficiency, Market Positioning, Customer Satisfaction, and Strategic Planning.</li>
-                <li>Develop and implement strategies for efficient information and knowledge management.</li>
-                <li>Curate and maintain a repository of relevant documents, research papers, articles, and other knowledge assets.</li>
-                <li>Create and update content including manuals, guides, and other documentation to facilitate knowledge transfer.</li>
-                <li>Develop and implement a strategic talent development plan aligned with organizational objectives.</li>
-                <li>Work with HR and managers to integrate talent development into the performance management process.</li>
-            </ul>
-        </div>
-        <div class="experience-item">
-            <h3>Veterinary Technician</h3>
-            <h4>Healing Pets Medical Center</h4>
-            <p>Petaling Jaya Selangor | Feb 2022 - Aug 2022</p>
-            <ul>
-                <li>Assisted veterinarians and technicians in patient care, including restraint, medication administration, and surgery preparation.</li>
-                <li>Maintained cleanliness and organization of hospital and kennels.</li>
-                <li>Educated clients on basic animal care and preventive health.</li>
-                <li>Conducted diagnostic tests such as bloodwork and urinalysis, and interpreted results.</li>
-                <li>Maintained medical records and ensured accurate billing.</li>
-                <li>Maintained equipment and supplies, including inventory control.</li>
-            </ul>
-        </div>
-        <div class="experience-item">
-            <h3>Conservation Intern</h3>
-            <h4>Kapas Conservation Society</h4>
-            <p>Pulau Kapas Terengganu | Dec 2021 - May 2022</p>
-            <ul>
-                <li>Created and developed presentations on Pulau Kapas species identification, including those of the fish and invertebrates that are frequently encountered.</li>
-                <li>Actively engaged in marine creature surveys at several sites near Pulau Kapas using various techniques including scuba diving, free diving, and snorkeling, which were carried out at least three times per week.</li>
-                <li>Overseen and supervised the World Ocean Week 2022 program, which included events and workshops for the island's residents and visitors to raise awareness and knowledge.</li>
-                <li>Organized the largest annual beach and reef cleanup event in Pulau Kapas, which featured 10 sponsors, including the senator's office and Marang District Council.</
-
-
-
+    <!-- Skills Section -->
     <section id="skills" class="container">
         <h2>Skills</h2>
         <ul>
-            <li>Microsoft Office - Experienced</li>
-            <li>Google Suites - Experienced</li>
-            <li>BioEdit - Beginner</li>
-            <li>MEGA 11 - Beginner</li>
-            <li>Canva - Intermediate</li>
-            <li>R-software - Beginner</li>
+            <li></p><strong>Microsoft Office, Google Suites, Microsoft 365, Power BI, R-software<strong> - Proficient in tools necessary for documentation, research, and presentations.</p></li>
+            <li></p><strong>Project Management<strong> - Monitored and administered research project.</p></li>
+            <li></p><strong>Partnership Development<strong> - Built strategic alliances with academic and research institutions.</p></li>
+            <li></p><strong>Environmental Policy and Assessment<strong> - Expertise in EIA which is critical for sustainability projects.</p></li>
         </ul>
     </section>
 
+    <!-- Contact Section -->
     <section id="contact" class="container">
         <h2>Contact</h2>
         <p>Email: <a href="mailto:jenorison.m@gmail.com">jenorison.m@gmail.com</a></p>
@@ -115,8 +157,55 @@
         <p>Phone: +60162489049</p>
     </section>
 
+    <!-- Footer -->
     <footer>
         <p>&copy; 2024 Jenorison Muji. All rights reserved.</p>
     </footer>
 </body>
 </html>
+
+<script>
+    // Get the modals and thumbnails
+    var modal1 = document.getElementById("transcriptModal1");
+    var thumbnail1 = document.querySelector('img[alt="Transcript 1"]');
+    var closeModal1 = modal1.querySelector(".close-modal");
+
+    var modal2 = document.getElementById("transcriptModal2");
+    var thumbnail2 = document.querySelector('img[alt="Transcript 2"]');
+    var closeModal2 = modal2.querySelector(".close-modal");
+
+    // When the user clicks the first thumbnail, open the first modal
+    thumbnail1.onclick = function() {
+        modal1.style.display = "block";
+    }
+
+    // When the user clicks on the close button of the first modal, close it
+    closeModal1.onclick = function() {
+        modal1.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside the first modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal1) {
+            modal1.style.display = "none";
+        }
+    }
+
+    // When the user clicks the second thumbnail, open the second modal
+    thumbnail2.onclick = function() {
+        modal2.style.display = "block";
+    }
+
+    // When the user clicks on the close button of the second modal, close it
+    closeModal2.onclick = function() {
+        modal2.style.display = "none";
+    }
+
+    // When the user clicks anywhere outside the second modal, close it
+    window.onclick = function(event) {
+        if (event.target == modal2) {
+            modal2.style.display = "none";
+        }
+    }
+</script>
+
