Your commit message here

--- a/index.html
+++ b/index.html
@@ -12,9 +12,7 @@
         <div class="container">
             <img src="jenorison.jpg" alt="Jenorison Muji">
             <h1>Jenorison Muji</h1>
-			</p>Marine Science Graduate | Conservation Enthusiast | Project Coordinator | Environmental Conservation | Marine Science Specialist
-            <p>Bachelor of Science with Honours (Marine Science)</p>
-            <p>Universiti Kebangsaan Malaysia (UKM)</p>
+			</p>Project Coordinator | Environmental Conservation Enthusiast | Environmental Impact Assesment (EIA)</p>
         </div>
     </header>
     
@@ -30,28 +28,7 @@
         </ul>
     </nav>
 
-    <!-- About Section -->
-    <section id="about" class="container">
-        <h2>About Me</h2>
-        <p>
-            Standing at the intersection of environmental challenges and sustainable solutions, my journey has been fueled by a deep desire to advocate for a harmonious balance between humanity and the planet. Initially set on a path to become a doctor, I realized my true calling lay in protecting the natural world, not just a few patients. Growing up in the heart of the Borneo jungle gave me a firsthand understanding of how rapidly our planet is deteriorating due to human activity. This realization drove me to focus on environmental sustainability as a career. 
-            <br><br>
-            Pursuing a degree in Marine Science was a deliberate step toward understanding the complexity of ecological systems and the profound effects of human behavior on them. My academic foundation sparked a passion for sustainable practices and conservation, and my undergraduate studies allowed me to explore the intricate workings of marine ecosystems. This, in turn, fueled my desire to apply sustainable principles in real-world scenarios and contribute meaningfully to the field.
-            <br><br>
-			In addition to my academic background, I have gained hands-on experience through practical work. A notable part of my journey was an internship with the Kapas Conservation Society on Pulau Kapas, an area once virtually untouched by human intervention. This experience heightened my awareness of environmental preservation and gave me valuable insights into practical sustainability efforts. While working on-site, I collaborated on a project to develop and implement a waste reduction program for a local community, demonstrating my ability to turn abstract ideas into impactful, real-world solutions.
-			<br><br>
-			My passion for environmental sustainability extends beyond my academic and professional experiences. I have been actively involved in community-based environmental projects, such as leading tree-planting activities and organizing awareness campaigns. These initiatives have strengthened my leadership and communication skills, allowing me to bring diverse groups together to work toward a shared environmental goal.
-			<br><br>
-			In my role as an executive at an engineering firm, I gained a deeper understanding of how sustainability is integrated into engineering practices. This hands-on experience reinforced my belief that sustainability must be a core principle embedded in all industries and sectors, and it showed me the tangible impact sustainable engineering practices can have on a larger scale.
-			<br><br>
-			Looking ahead, I am eager to continue applying my knowledge and skills to drive positive environmental change. I am actively seeking opportunities to contribute to sustainability initiatives, leveraging my practical experience and academic background to create a cleaner, greener future. While I am passionate about working in roles related to environmental sustainability, I am open to any position or opportunity where I can make a meaningful impact.
-			<br><br>
-            <strong>Vision:</strong> To lead impactful marine conservation initiatives that protect and restore marine biodiversity for future generations.
-            <br>
-            <strong>Mission:</strong> To combine scientific research with practical conservation efforts, fostering community involvement and sustainable practices in marine ecosystems around the world.
-        </p>
-    </section>
-	
+
 	<!-- Education Section -->
     <section id="education" class="container">
     <h2>Education</h2>
@@ -59,8 +36,8 @@
         <li>
             <h3>Bachelor of Science with Honours (Marine Science)</h3>
             <p>Universiti Kebangsaan Malaysia (UKM) | Sep 2018 — Aug 2022</p>
-            <p>Current CGPA: 3.68/4.00</p>
-            <p>Related coursework: Aerial Photography, Dynamic Oceanography, Environmental Impact Assessment, and more.</p>
+            <p>Current CGPA: 3.68/4.00 (First Class Degree)</p>
+            <p>Related coursework/final year project: Synthetic Plastic Degradation Using Mangrove Bacteria in Negeri Sembilan and Johor, Malaysia.</p>
 
             <!-- Transcript Images -->
             <div class="transcript">
@@ -103,6 +80,28 @@
     </ul>
 </section>
 
+    <!-- About Section -->
+    <section id="about" class="container">
+        <h2>About Me</h2>
+        <p>
+            Standing at the intersection of environmental challenges and sustainable solutions, my journey has been fueled by a deep desire to advocate for a harmonious balance between humanity and the planet. Initially set on a path to become a doctor, I realized my true calling lay in protecting the natural world, not just a few patients. Growing up in the heart of the Borneo jungle gave me a firsthand understanding of how rapidly our planet is deteriorating due to human activity. This realization drove me to focus on environmental sustainability as a career. 
+            <br><br>
+            Pursuing a degree in Marine Science was a deliberate step toward understanding the complexity of ecological systems and the profound effects of human behavior on them. My academic foundation sparked a passion for sustainable practices and conservation, and my undergraduate studies allowed me to explore the intricate workings of marine ecosystems. This, in turn, fueled my desire to apply sustainable principles in real-world scenarios and contribute meaningfully to the field.
+            <br><br>
+			In addition to my academic background, I have gained hands-on experience through practical work. A notable part of my journey was an internship with the Kapas Conservation Society on Pulau Kapas, an area once virtually untouched by human intervention. This experience heightened my awareness of environmental preservation and gave me valuable insights into practical sustainability efforts. While working on-site, I collaborated on a project to develop and implement a waste reduction program for a local community, demonstrating my ability to turn abstract ideas into impactful, real-world solutions.
+			<br><br>
+			My passion for environmental sustainability extends beyond my academic and professional experiences. I have been actively involved in community-based environmental projects, such as leading tree-planting activities and organizing awareness campaigns. These initiatives have strengthened my leadership and communication skills, allowing me to bring diverse groups together to work toward a shared environmental goal.
+			<br><br>
+			In my role as an executive at an engineering firm, I gained a deeper understanding of how sustainability is integrated into engineering practices. This hands-on experience reinforced my belief that sustainability must be a core principle embedded in all industries and sectors, and it showed me the tangible impact sustainable engineering practices can have on a larger scale.
+			<br><br>
+			Looking ahead, I am eager to continue applying my knowledge and skills to drive positive environmental change. I am actively seeking opportunities to contribute to sustainability initiatives, leveraging my practical experience and academic background to create a cleaner, greener future. While I am passionate about working in roles related to environmental sustainability, I am open to any position or opportunity where I can make a meaningful impact.
+			<br><br>
+            <strong>Vision:</strong> To lead impactful marine conservation initiatives that protect and restore marine biodiversity for future generations.
+            <br>
+            <strong>Mission:</strong> To combine scientific research with practical conservation efforts, fostering community involvement and sustainable practices in marine ecosystems around the world.
+        </p>
+    </section>
+	
 
 
     <!-- Notable Project Section -->
@@ -112,21 +111,18 @@
     <!-- Minconsult Sdn. Bhd. Project: University Collaboration -->
     <div class="project-item">
         <h3>University Collaboration – Minconsult Sdn. Bhd.</h3>
-        <p><strong>Duration:</strong> Ongoing</p>
         <p>Collaborated with 12 local and 2 international universities on engineering research, knowledge exchange, and talent development initiatives. Established long-term Memorandums of Understanding (MoUs) and coordinated MoU signing ceremonies to formalize partnerships.</p>
     </div>
 
     <!-- Minconsult Sdn. Bhd. Project: Digitalization of Library -->
     <div class="project-item">
         <h3>Digitalization of Old Library – Minconsult Sdn. Bhd.</h3>
-        <p><strong>Duration:</strong> Ongoing</p>
         <p>Led the transformation of the company’s library into a digital repository, increasing the efficiency of knowledge access and facilitating easier retrieval of documents for employees and stakeholders.</p>
     </div>
 
     <!-- Minconsult Sdn. Bhd. Project: Benchmarking for Business Plan Formulations -->
     <div class="project-item">
         <h3>Benchmarking for Business Plan Formulations – Minconsult Sdn. Bhd.</h3>
-        <p><strong>Duration:</strong> Ongoing</p>
         <p>
             Conducted the first-ever benchmarking exercise at Minconsult to guide improvements and define the company's way forward. This benchmarking effort was instrumental in identifying areas for strategic enhancements, and served as the foundation for the development of new Business Plans aligned with industry trends.
         </p>
@@ -159,7 +155,8 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; 2024 Jenorison Muji. All rights reserved.</p>
+        <p>&copy; Copyright © [Year] [Your Name/Your Company Name]. All rights reserved.<p>
+		<p>This work is protected by copyright law. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the copyright owner, except in the case of brief quotations in reviews or scholarly works. For permission requests, write to the publisher at the address below.</p>
     </footer>
 </body>
 </html>
@@ -208,4 +205,5 @@
         }
     }
 </script>
+
 
