--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <li><a href="#education">Education</a></li>
             <li><a href="#notable projects">Notable projects</a></li>
             <li><a href="#skills">Skills</a></li>
-            <li><a href="certifications.html">Awards & Certifications</a></li>
+            <li><a href="https://www.linkedin.com/in/jenorison-muji/">Awards & Certifications</a></li>
             <li><a href="#contact">Contact</a></li>
         </ul>
     </nav>
@@ -76,6 +76,7 @@
             <h3>Sijil Tinggi Pelajaran Malaysia (STPM)</h3>
             <p>Sekolah Menengah Kebangsaan Gunsanad | Mei 2016 — Dec 2017</p>
             <p>CGPA: 2.59</p>
+			<p>Achievement: Best Student Award<p>
         </li>
     </ul>
 </section>
@@ -155,8 +156,8 @@
 
     <!-- Footer -->
     <footer>
-        <p>&copy; Copyright © [Year] [Your Name/Your Company Name]. All rights reserved.<p>
-		<p>This work is protected by copyright law. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the copyright owner, except in the case of brief quotations in reviews or scholarly works. For permission requests, write to the publisher at the address below.</p>
+        <p>&copy; Copyright © 2024 Jenorison Muji All rights reserved.<p>
+		<p>This work is protected by copyright law. No part of this publication may be reproduced, distributed, or transmitted in any form or by any means, including photocopying, recording, or other electronic or mechanical methods, without the prior written permission of the copyright owner, except in the case of brief quotations in reviews or scholarly works. For permission requests, write to the publisher.</p>
     </footer>
 </body>
 </html>
